--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
     "api/twitch-users.js": {
       "maxDuration": 10
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
