--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,6 @@
     }
   },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/auth/callback", "destination": "/" }
   ]
 }
