--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "cobe": "^0.6.3",
+    "express": "^4.19.2",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
