--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,5 +24,10 @@ jobs:
       - name: Build and push Dashboard image
         uses: docker/build-push-action@v4
         with:
+          context: ./dashboard
+          file: ./dashboard/dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/dashboard:latest
+          build-args: |
+            VITE_TWITCH_CLIENT_ID=${{ secrets.VITE_TWITCH_CLIENT_ID }}
+            VITE_TWITCH_REDIRECT_URI=${{ vars.VITE_TWITCH_REDIRECT_URI }}
